--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -10,6 +10,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <ul>
+        <li><em>1.0.2</em> Read-only files conversion support (converted code is put into Scala scratch file)</li>
+      </ul>
+
     ]]>
   </change-notes>
 
@@ -28,10 +32,24 @@
 
   <actions>
     <!-- Add your actions here -->
-    <action id="Scalagen.RunScalagen" class="ScalagenClass" text="Scalagen" description="Scalagen">
+    <action id="Scalagen.RunScalagen" class="ScalagenClass" text="Convert Java to Scala" description="Convert current selection or document into Scala with Scalagen">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl J"/>
     </action>
+
+    <action id="OpenScalaScratch" class="OpenScalaScratchAction" text="New Scala Scratch"
+            description="Opens new Scala scratch file">
+      <add-to-group group-id="ToolsMenu" anchor="last"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl S"/>
+    </action>
+
+    <action id="OpenJavaScratchAction" class="OpenJavaScratchAction" text="New Java Scratch"
+            description="Opens new Java scratch file">
+      <add-to-group group-id="ToolsMenu" anchor="last"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl N"/>
+    </action>
   </actions>
+
+  <depends>org.intellij.scala</depends>
 
 </idea-plugin>
