--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,21 +1,22 @@
 <idea-plugin version="2">
   <id>org.github.feiwongreed</id>
   <name>Scalagen, Java to Scala converter</name>
-  <version>1.0.3</version>
+  <version>1.0.4</version>
   <vendor email="pshirshov@gmail.com" url="https://github.com/pshirshov/idea-scalagen">pshirshov</vendor>
 
   <description><![CDATA[
       <p>This plugin allows you to convert Java code in current editor into Scala.</p>
       <ul>
-        <li>Default shortcut is <em>Ctrl+K, Ctrl+J</em></li>
+        <li>Default shortcut is <em>Ctrl+K, Ctrl+G</em></li>
         <li>Supports quick opening of Scala scrathes (default shortcut is <em>Ctrl+K, Ctrl+S</em>)
-        and Java scratches (default shortcut is <em>Ctrl+K, Ctrl+N</em>)</li>
+        and Java scratches (default shortcut is <em>Ctrl+K, Ctrl+S</em>)</li>
       </ul>
     ]]></description>
 
   <change-notes><![CDATA[
       <ul>
-        <li><em>1.0.2</em>: Read-only files conversion support (converted code is put into Scala scratch file)</li>
+        <li><em>1.0.4</em>: Default shortcuts changed, converted code is always opened as a scratch, refactorings</li>
+        <li><em>1.0.2</em>: Read-only files conversion support (Scala scratch used for converted code)</li>
       </ul>
 
     ]]>
@@ -24,36 +25,32 @@
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
   <idea-version since-build="141.0"/>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <!-- uncomment to enable plugin in all products
-  <depends>com.intellij.modules.lang</depends>
-  -->
-
   <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
   </extensions>
 
   <actions>
-    <!-- Add your actions here -->
-    <action id="Scalagen.RunScalagen" class="com.github.pshirshov.ScalagenClass" text="Convert Java to Scala" description="Convert current selection or document into Scala with Scalagen">
+    <action id="Scalagen.RunScalagen" class="com.github.pshirshov.InvokeScalagenAction" text="Convert Java to Scala" description="Convert current selection or document into Scala with Scalagen">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
-      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl J"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl G"/>
     </action>
 
-    <action id="OpenScalaScratch" class="com.github.pshirshov.OpenScalaScratchAction" text="New Scala Scratch"
+    <action id="OpenScalaScratch" class="com.github.pshirshov.scratches.OpenScalaScratchAction" text="New Scala Scratch"
             description="Opens new Scala scratch file">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl S"/>
     </action>
 
-    <action id="com.github.pshirshov.OpenJavaScratchAction" class="com.github.pshirshov.OpenJavaScratchAction" text="New Java Scratch"
+    <action id="com.github.pshirshov.scratches.OpenJavaScratchAction" class="com.github.pshirshov.scratches.OpenJavaScratchAction" text="New Java Scratch"
             description="Opens new Java scratch file">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
-      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl N"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl J"/>
     </action>
   </actions>
 
+
+  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
+       on how to target different products -->
+  <depends>com.intellij.modules.lang</depends>
   <depends>org.intellij.scala</depends>
 
 </idea-plugin>
