--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -34,19 +34,17 @@
 
   <actions>
     <action id="Scalagen.RunScalagen" class="com.github.pshirshov.InvokeScalagenAction" text="Convert Java to Scala" description="Convert current selection or document into Scala with Scalagen">
-      <add-to-group group-id="ToolsMenu" anchor="last"/>
+      <add-to-group group-id="CodeMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl G"/>
     </action>
 
     <action id="OpenScalaScratch" class="com.github.pshirshov.scratches.OpenScalaScratchAction" text="New Scala Scratch"
             description="Opens new Scala scratch file">
-      <add-to-group group-id="ToolsMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl S"/>
     </action>
 
     <action id="com.github.pshirshov.scratches.OpenJavaScratchAction" class="com.github.pshirshov.scratches.OpenJavaScratchAction" text="New Java Scratch"
             description="Opens new Java scratch file">
-      <add-to-group group-id="ToolsMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl K" second-keystroke="ctrl J"/>
     </action>
   </actions>
